--- a/src/main/webapp/helpTuleapSecurityRealm/helpTuleapRealm/help_fr.html
+++ b/src/main/webapp/helpTuleapSecurityRealm/helpTuleapRealm/help_fr.html
@@ -1,5 +1,5 @@
 <div>
-    En utilisant se domaine, les utilisateurs Jenkins peuvent utiliser leur compte Tuleap pour se connecter au serveur
+    En utilisant ce domaine, les utilisateurs Jenkins peuvent utiliser leur compte Tuleap pour se connecter au serveur
     Jenkins. <br/>
     Pour pouvoir être autentifié en utilisant Tuleap, vous devez rajouter l'URL de redirection du serveur Jenkins dans
     votre application Tuleap OAuth2 <br/>
