Correct some spelling mistake

--- a/src/main/webapp/helpTuleapSecurityRealm/helpTuleapRealm/help_fr.html
+++ b/src/main/webapp/helpTuleapSecurityRealm/helpTuleapRealm/help_fr.html
@@ -1,7 +1,7 @@
 <div>
     En utilisant ce domaine, les utilisateurs Jenkins peuvent utiliser leur compte Tuleap pour se connecter au serveur
     Jenkins. <br/>
-    Pour pouvoir être autentifié en utilisant Tuleap, vous devez rajouter l'URL de redirection du serveur Jenkins dans
+    Pour pouvoir être authentifié en utilisant Tuleap, vous devez rajouter l'URL de redirection du serveur Jenkins dans
     votre application Tuleap OAuth2 <br/>
     L'URL de redirection est de la forme suivante: https://your_jenkins_server.example.com/securityRealm/finishLogin
     <br/> <br/>
